--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
     <script src="vendored/ics.js"></script>
     <script src="vendored/fullcalendar.js"></script>
     <link rel="stylesheet" href="fullcalendar_custom.css">
+
+    <script defer="" src="https://static.cloudflareinsights.com/beacon.min.js"
+        data-cf-beacon="{&quot;token&quot;: &quot;4788841a6bfc4cb681d818162dcb5a39&quot;}"></script>
+    <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-LYCXLXFFRP"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-LYCXLXFFRP');
+        gtag('event', 'url', {
+            'url': window.location.href,
+        });
+    </script>
 </head>
 
 <!-- Create HTML Templates -->
