--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     <script src="vendored/fullcalendar.js"></script>
     <link rel="stylesheet" href="fullcalendar_custom.css">
 
-    <script defer="" src="https://static.cloudflareinsights.com/beacon.min.js"
-        data-cf-beacon="{&quot;token&quot;: &quot;4788841a6bfc4cb681d818162dcb5a39&quot;}"></script>
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "f70e62cde3394a298ceb0b76b4c5f61e"}'></script><!-- End Cloudflare Web Analytics -->
     <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-LYCXLXFFRP"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
